cmake_minimum_required(VERSION 3.26)
project(i2p C)

set(CMAKE_C_STANDARD 23)

add_executable(i2p
        p.5.c
        #        main.c
        #sample.c
      #  lab.c
      #  TECHNICAL.c
       # p.1.c
     #   p.2.c
      #  p.3.c
      #  lab2.c
      # lab3.c
       # technical2.c
        #technical3.c
        #p.4.c
)
